<resources>
    <string name="app_name">Oz Food</string>
    <string name="mainHeader">Please Log In</string>
    <string name="mainUsernameHint">Username</string>
    <string name="mainPasswordHint">Password</string>
    <string name="mainLogInHint">Log In</string>
    <string name="mainLogOutHint">Log Out</string>
    <string name="mainSignUpHint">Sign Up</string>
    <string name="mainBackHint">Back</string>
    <string name="mainAddFundsHint">Add Funds</string>
    <string name="mainViewCartHint">View Cart</string>
    <string name="mainBuyItemsHint">Purchase Items</string>
    <string name="mainAdmin">Admin</string>
    <string name="mainUpdateItemHint">Update Item Info</string>
    <string name="mainAddNewItemHint">Add Item</string>
    <string name="mainRemoveItemHint">Remove Item</string>
    <string name="mainWithdrawHint">Profits</string>
    <string name="welcome_message">Welcome, </string>
    <string name="mainConfirmPassHint">Confirm Password</string>
    <string name="PriceHint">Price: $0.00</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="addFundsHint">Add Funds</string>
    <string name="fundsHeader">Account Funds</string>
    <string name="totalFundsHint">$0.00</string>
    <string name="fundValueHint">Enter an amount</string>
    <string name="buyItemsHint">Items Menu</string>
    <string name="addToCartHint">Add to Cart</string>
    <string name="cartHeader">Cart</string>
    <string name="quantityHint">1</string>
    <string name="cartTotal">Total: $0.00</string>
    <string name="addItems">Add Item</string>
    <string name="buyHint">Buy</string>
    <string name="no">No</string>
    <string name="yes">yes</string>
    <string name="logout">Logout?</string>
    <string name="emptyCartHint">Your cart is empty</string>
    <string name="withdrawHeaderHint">Withdraw Profit</string>
    <string name="withdrawBtnHint">Withdraw</string>
    <string name="deleteBtnHint">Delete</string>
    <string name="deleteInstructions">Select an Item from the Dropdown Box Above.</string>
</resources>