<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="363dp"
        android:layout_height="78dp"
        android:layout_marginTop="72dp"
        android:fadeScrollbars="true"
        android:gravity="center"
        android:scrollbars="vertical"
        android:text="@string/PriceHint"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerItems" />

    <Spinner
        android:id="@+id/spinnerItems"
        android:layout_width="361dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:textAlignment="center"
        android:scrollbars="vertical"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyItemHeader" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="103dp"
        android:layout_height="79dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/quantityHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/plusBtn"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/minusBtn"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

    <Button
        android:id="@+id/plusBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="40dp"
        android:text="@string/plus"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

    <Button
        android:id="@+id/minusBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="76dp"
        android:text="@string/minus"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

    <TextView
        android:id="@+id/buyItemHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/buyItemsHint"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addToCart"
        android:layout_width="151dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:text="@string/addToCartHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity" />

</androidx.constraintlayout.widget.ConstraintLayout>

