<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <TextView
        android:id="@+id/cartHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/cartHeader"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/cartTotal"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemsInCart" />

    <Button
        android:id="@+id/buyItemsInCart"
        android:layout_width="131dp"
        android:layout_height="61dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:text="@string/buyHint"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total" />

    <Button
        android:id="@+id/addItems"
        android:layout_width="131dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:textSize="18dp"
        android:text="@string/addItems"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total" />

    <TextView
        android:id="@+id/itemsInCart"
        android:layout_width="324dp"
        android:layout_height="216dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/border"
        android:fadeScrollbars="true"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:text="@string/emptyCartHint"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartHeader" />
</androidx.constraintlayout.widget.ConstraintLayout>