<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="Welcome, Username"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addFunds"
        android:layout_width="268dp"
        android:layout_height="75dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/mainAddFundsHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/viewCart"
        android:layout_width="268dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/mainViewCartHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFunds" />

    <Button
        android:id="@+id/purchaseItem"
        android:layout_width="268dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/mainBuyItemsHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCart" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="268dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/mainAdmin"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseItem"
        android:visibility="invisible"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>