<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="Welcome, Username"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainUpdateButton"
        android:layout_width="274dp"
        android:layout_height="83dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/mainUpdateItemHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/mainAddItemButton"
        android:layout_width="268dp"
        android:layout_height="75dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/mainAddNewItemHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainUpdateButton" />

    <Button
        android:id="@+id/mainRemoveButton"
        android:layout_width="268dp"
        android:layout_height="75dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/mainRemoveItemHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainAddItemButton" />

    <Button
        android:id="@+id/mainShopButton"
        android:layout_width="268dp"
        android:layout_height="75dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/mainShopHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainRemoveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>